# Car_License_Plate_Detection

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml  requirements.txt  results.json
.github/workflows/: pipeline_test.yaml
Docker/: .dockerignore  Dockerfile
assets/sample_run/: results.json
config/: configurations.py
src/: licenseplate_detector.py  main.py  ocr_model.py  pipeline.py
src/license_plate/: __init___.py  licenseplate_detector.py  main.py  ocr_model.py  pipeline.py
src/license_plate/utils/: directory_manager.py  logger.py  weight_downloader.py
test/: __init__.py  test_pipeline.py
